[package]
name = "rust-tui-gssp-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossterm = "0.20.0"

[dependencies.tui]
version = "0.16.0"
default-features = false
features = ["crossterm"]